--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,7 @@ p{
 
 .slogan h1{
 	font-size: 54px;
+	color:#3e4042;
 }
 
 .slogan h2{
@@ -41,7 +42,7 @@ p{
 
 .slogan h3{
 	font-weight: 300;
-	padding: 10% 16%;
+	padding: 2% 16% 10%;
 	font-family: 'Barlow Semi Condensed', sans-serif;
 }
 
@@ -69,8 +70,9 @@ p{
 }
 
 .main-img{
-	background: url('../img/main_img.jpg') no-repeat 100% 100%;
+	background: url('../img/bg-xl.png') no-repeat 100% 100%;
 	min-height: 603px;
+	padding-top: 2%; 
 }
 
 .logo{
@@ -127,30 +129,43 @@ a.llamar, a.mail{
 	background: #d9d9d9; 
 }
 
+@media (max-width: 1366px) {
+	.main-img .img-coches{
+		width: 90%;
+	}
+}
 
 @media (max-width: 1024px) {
 	.slogan h3 {
     	padding: 10% 10%;
 	}
 	.main-img {
-	    background-position:  80% center;
+	    padding-top: 15%;
+	    background-size: cover;
+	}
+
+	.main-img .txt-coches{
+		width: 80%;
+		padding-bottom: 7%; 
 	}
 }
 
 @media (max-width: 768px) {
 	.main-img {
+		padding: 5% 0;
 	    min-height: 422px;
-	    background-size: cover;
+	}
+	.slogan {
+	    padding: 7% 0;
+	}
+	.slogan h3 {
+	    padding: 2% 10% 5%;
 	}
 }
 
 @media (max-width: 414px) {
-  	.slogan h3 {
-    	padding: 10% 10%;
-	}
 	.main-img {
 	    min-height: 230px;
-	    background-size: contain;
 	}
 }
 
@@ -176,28 +191,13 @@ a.llamar, a.mail{
 }
 
 @media (max-width: 320px) {
-  	.slogan h3 {
-    	padding: 10% 5%;
-	}
-
-	.slogan img {
-    	width: 100%;
-	}
-
 	.main-img {
 	    min-height: 176px;
-	    background-size: contain;
 	}
 
 	.map p{
 	    padding-left: 5%;
 	    padding-right: 5%;
-	}
-}
-
-@media (max-width: 280px) {
-	.main-img {
-	    background-size: cover;
 	}
 }
 
